uidir = $(pkgdatadir)/ui

dist_ui_DATA = \
	edit-toolbars-dialog.glade		\
	mail-summary-popup.glade		\
	mailbox-properties-dialog.glade		\
	menus.xml				\
	properties-dialog.glade			\
	toolbars.xml

EXTRA_DIST = \
	edit-toolbars-dialog.gladep		\
	mail-summary-popup.gladep		\
	mailbox-properties-dialog.gladep	\
	properties-dialog.gladep
